Publish ninth draft.

--- a/srfi-255.html
+++ b/srfi-255.html
@@ -63,6 +63,7 @@
       <li>Draft #6 published: 2024-11-13</li>
       <li>Draft #7 published: 2024-11-20</li>
       <li>Draft #8 published: 2024-12-02</li>
+      <li>Draft #9 published: 2024-12-22</li>
     </ul>
 
 <h2 id="table-of-contents">Table of Contents</h2>
